# GitStory

./: .clang-format  .gitignore  CMakeLists.txt  README.md
GitUtilities/: CMakeLists.txt  GitCommandsWrapper.cpp  GitCommandsWrapper.h
main/: CMakeLists.txt  GitStoryApplication.cpp  GitStoryApplication.h  main.cpp
main/userInterface/: mainwindow.cpp  mainwindow.h  mainwindow.ui
